--- a/action.yml
+++ b/action.yml
@@ -1,21 +1,21 @@
-name: 'Run rubocop with reviewdog'
-description: '🐶 Run rubocop with reviewdog on pull requests to improve code review experience.'
+name: 'Run erbcop with reviewdog'
+description: '🐶 Run erbcop with reviewdog on pull requests to improve code review experience.'
 author: 'mgrachev (reviewdog)'
 inputs:
   github_token:
     description: 'GITHUB_TOKEN'
     default: ${{ github.token }}
-  rubocop_version:
-    description: 'Rubocop version'
-  rubocop_extensions:
-    description: 'Rubocop extensions'
-    default: 'rubocop-rails rubocop-performance rubocop-rspec rubocop-i18n rubocop-rake'
-  rubocop_flags:
-    description: 'Rubocop flags. (rubocop <rubocop_flags>)'
+  erbcop_version:
+    description: 'Erbcop version'
+  erbcop_extensions:
+    description: 'Erbcop extensions'
+    default: 'erbcop-rails erbcop-performance erbcop-rspec erbcop-i18n erbcop-rake'
+  erbcop_flags:
+    description: 'Erbcop flags. (erbcop <erbcop_flags>)'
     default: ''
   tool_name:
     description: 'Tool name to use for reviewdog reporter'
-    default: 'rubocop'
+    default: 'erbcop'
   level:
     description: 'Report level for reviewdog [info,warning,error]'
     default: 'error'
@@ -38,13 +38,13 @@ inputs:
     description: 'Additional reviewdog flags'
     default: ''
   workdir:
-    description: "The directory from which to look for and run Rubocop. Default '.'"
+    description: "The directory from which to look for and run Erbcop. Default '.'"
     default: '.'
   skip_install:
-    description: "Do not install Rubocop or its extensions. Default: `false`"
+    description: "Do not install Erbcop or its extensions. Default: `false`"
     default: 'false'
   use_bundler:
-    description: "Run Rubocop with bundle exec. Default: `false`"
+    description: "Run Erbcop with bundle exec. Default: `false`"
     default: 'false'
 runs:
   using: 'composite'
@@ -56,9 +56,9 @@ runs:
         # INPUT_<VARIABLE_NAME> is not available in Composite run steps
         # https://github.community/t/input-variable-name-is-not-available-in-composite-run-steps/127611
         INPUT_GITHUB_TOKEN: ${{ inputs.github_token }}
-        INPUT_RUBOCOP_VERSION: ${{ inputs.rubocop_version }}
-        INPUT_RUBOCOP_EXTENSIONS: ${{ inputs.rubocop_extensions }}
-        INPUT_RUBOCOP_FLAGS: ${{ inputs.rubocop_flags }}
+        INPUT_ERBCOP_VERSION: ${{ inputs.erbcop_version }}
+        INPUT_ERBCOP_EXTENSIONS: ${{ inputs.erbcop_extensions }}
+        INPUT_ERBCOP_FLAGS: ${{ inputs.erbcop_flags }}
         INPUT_TOOL_NAME: ${{ inputs.tool_name }}
         INPUT_LEVEL: ${{ inputs.level }}
         INPUT_REPORTER: ${{ inputs.reporter }}
